[workspace]
members = [
  "focus-interceptor-core"
  "focus-interceptor-cli"
]

[workspace.package]
authors = ["Multirious"]
homepage = "https://github.com/multirious-adhd-assistants/focus-interceptor"
repository = "https://github.com/multirious-adhd-assistants/focus-interceptor"
licnese = "MIT"

edition = "2021"
rust-version = "1.70"
